<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">IronSecurity</string>
    <string name="login">LOGIN</string>
    <string name="remember_me">Remember Me</string>
    <string name="salle_manger">Salle à manger</string>
    <string name="todo">TODO</string>
    <string name="cuisine">Cuisine</string>
    <string name="wc">WC</string>
    <string name="sam">SAM</string>
    <string name="vestibule">Vestibule</string>
    <string name="chambre">Chambre</string>
    <string name="suite_parentale">Suite Parentale</string>
    <string name="salon">Salon</string>
    <string name="hall_nord">Hall nord</string>
    <string name="ext_rieur">Extérieur</string>
    <string name="premier_etage">Premier Etage</string>
    <string name="rez_de_chaus_e">Rez De Chausée</string>
    <string name="garage">Garage</string>
    <string name="lumi_re_5">Lumière 5</string>
    <string name="lumi_re_7">Lumière 7</string>
    <string name="lumi_re_3">Lumière 3</string>
    <string name="lumi_re_4">Lumière 4</string>
    <string name="lumi_re_6">Lumière 6</string>
    <string name="lumi_re_2">Lumière 2</string>
    <string name="store_1">Store 1</string>
    <string name="store_2">Store 2</string>
    <string name="clim">Clim</string>
    <string name="cam_ra_1">Caméra 1</string>
    <string name="cam_ra_2">Caméra 2</string>
    <string name="lumi_re_1">Lumière 1</string>
    <string name="localisation">Localisation</string>
    <string name="enregister_scenario">Enregister scénario</string>
    <string name="duree">Durée</string>
    <string name="temps">Temps</string>
    <string name="ajouter_au_scenario">Ajouter au scénario</string>
    <string name="deroulement_du_scenario">Déroulement du scénario</string>
    <string name="emplacements">Emplacements</string>
    <string name="exterieur_etages">Extérieur/Etages</string>
    <string name="equipements">Equipements</string>
    <string name="action">Action</string>
    <string name="logo">logo</string>
    <string name="textview">TextView</string>
    <string name="mentions_l_gales_le_site_est_dit_par_la_soci_t_prodroid_sarl_soci_t_responsabilit_limit_e_au_capital_social_de_4_000_euros_rcs_nanterre_b_753_594_027_domicili_e_au_1_place_paul_verlaine_92100_boulogne_billancourt_num_ro_siret_75359402700017_directeur_de_publication_et_webmaster_jean_louis_dell_oro_nous_contacter_cette_adresse_lesapplicationsandroid_gmail_com_le_site_est_h_berg_par_infomaniak_network_sa_soci_t_anonyme_ch_660_0_059_996_1_domicili_e_au_26_avenue_de_la_praille_1227_carouge_gen_ve_suisse_au_capital_social_de_102_000_francs_suisses_le_pr_sent_site_web_et_l_ensemble_de_son_contenu_y_compris_textes_images_fixes_ou_anim_es_bases_de_donn_es_programmes_etc_est_prot_g_par_le_droit_d_auteur_pour_en_savoir_plus_ce_propos_veuillez_lire_nos_conditions_g_n_rales_d_utilisation_cgu_conform_ment_la_loi_n_78_17_du_6_janvier_1978_relative_l_informatique_aux_fichiers_et_aux_libert_s_modifi_e_par_la_loi_n_2004_801_du_6_ao_t_2004_vous_disposez_tout_moment_d_un_droit_d_acc_s_de_rectification_et_de_suppression_des_donn_es_personnelles_vous_concernant_formulaire_citation_dans_nos_articles_photos_si_vous_souhaitez_exercer_ce_droit_il_vous_suffit_de_nous_crire_au_1_place_paul_verlaine_92100_boulogne_billancourt_ou_de_nous_contacter_par_mail_lesapplicationsandroid_gmail_com">Mentions légales Le site est édité par la société Prodroid, SARL (société à responsabilité limitée) au capital social de 4.000 euros (RCS Nanterre B 753 594 027), domiciliée au 1 Place Paul Verlaine 92100 Boulogne-Billancourt. Numéro SIRET : 75359402700017. Directeur de publication et webmaster : Jean-Louis Dell’Oro. Nous contacter à cette adresse : lesapplicationsandroid@gmail.com Le site est hébergé par INFOMANIAK NETWORK SA, société anonyme (CH-660.0.059.996-1) domiciliée au 26, Avenue de la Praille 1227 Carouge / Genève Suisse, au capital social de 102.000 francs suisses. Le présent Site Web et l’ensemble de son contenu, y compris textes, images fixes ou animées, bases de données, programmes, etc., est protégé par le droit d’auteur. Pour en savoir plus à ce propos, veuillez lire nos conditions générales d’utilisation (CGU). Conformément à la loi n°78 – 17 du 6 janvier 1978 relative à l’informatique, aux fichiers et aux libertés, modifiée par la loi n°2004-801 du 6 août 2004, vous disposez à tout moment d’un droit d’accès, de rectification et de suppression des données personnelles vous concernant (formulaire, citation dans nos articles, photos). Si vous souhaitez exercer ce droit, il vous suffit de nous écrire au 1 Place Paul Verlaine 92100 Boulogne-Billancourt ou de nous contacter par mail : lesapplicationsandroid@gmail.com</string>
    <string-array name="ChoixScenar">
        <item>Choix du Scénario</item>
        <item>Scenario1</item>
        <item>Scenario2</item>
        <item>Scenario3</item>
    </string-array>

</resources>
