<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="392dp"
        android:layout_height="384dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="187dp">

        <Switch
            android:id="@+id/switch7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/switch6"
            android:layout_alignParentTop="true"
            android:layout_marginTop="214dp"
            android:text="@string/lumi_re_5" />

        <Switch
            android:id="@+id/switch8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/switch1"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="59dp"
            android:text="@string/lumi_re_7" />

        <Switch
            android:id="@+id/switch4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="33dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="133dp"
            android:text="@string/lumi_re_3" />

        <Switch
            android:id="@+id/switch5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/switch1"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="175dp"
            android:text="@string/lumi_re_4" />

        <Switch
            android:id="@+id/switch6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/switch1"
            android:layout_alignParentTop="true"
            android:layout_marginTop="250dp"
            android:text="@string/lumi_re_6" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/switch4"
            android:layout_alignParentTop="true"
            android:layout_marginTop="47dp"
            android:text="@string/lumi_re_1" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch1"
            android:layout_alignStart="@+id/switch1"
            android:layout_marginTop="15dp"
            android:text="@string/lumi_re_2" />

        <Switch
            android:id="@+id/switch9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/switch1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/store_1" />

        <Switch
            android:id="@+id/switch10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/switch9"
            android:layout_alignTop="@+id/switch1"
            android:layout_marginTop="50dp"
            android:text="@string/store_2" />

        <Switch
            android:id="@+id/switch11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/switch9"
            android:layout_alignTop="@+id/switch1"
            android:layout_marginTop="90dp"
            android:text="@string/clim" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="146dp"
            android:text="@string/cam_ra_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/switch6"
            android:layout_alignEnd="@+id/switch9"
            android:layout_marginTop="-1dp"
            android:layout_marginEnd="-6dp"
            android:text="@string/cam_ra_2" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/salon"
        android:layout_width="396dp"
        android:layout_height="175dp"
        android:background="@drawable/salon"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"></LinearLayout>

</android.support.constraint.ConstraintLayout>