<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".CreateScenar">

    <RelativeLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Deroulement"
            android:layout_width="360dp"
            android:layout_height="140dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="96dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="306dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="269dp"
            android:text="@string/deroulement_du_scenario"
            android:visibility="visible" />

        <Button
            android:id="@+id/Enregistre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="145dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="450dp"
            android:clickable="true"
            android:text="@string/enregister_scenario" />

        <Button
            android:id="@+id/Ajouter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="248dp"
            android:layout_marginEnd="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginBottom="424dp"
            android:clickable="true"
            android:text="@string/ajouter_au_scenario" />

        <Spinner
            android:id="@+id/Actions"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="179dp"
            android:layout_marginRight="179dp" />

        <Spinner
            android:id="@+id/Ext_Etages"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="126dp"
            android:layout_marginEnd="179dp"
            android:layout_marginRight="179dp" />

        <Spinner
            android:id="@+id/Equipements"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="71dp"
            android:layout_marginEnd="179dp"
            android:layout_marginRight="179dp" />

        <Spinner
            android:id="@+id/Pieces"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="183dp"
            android:layout_marginEnd="179dp"
            android:layout_marginRight="179dp" />

        <Spinner
            android:id="@+id/Temps"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="276dp"
            android:layout_marginLeft="276dp"
            android:layout_marginTop="91dp"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp" />

        <EditText
            android:id="@+id/Durée"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:ems="10"
            android:hint="Durée"
            android:inputType="number" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>